@@ -7,6 +7,8 @@ Disconnect = !Disconnect!
 Exception = !Exception!
 Exit = !Exit!
 Host = !Host!
+MooListDialog = !MooListDialog!
+MooListDialogTitle = !MooListDialogTitle!
 OK = !OK!
 Port = !Port!
 Send = !Send!
