@@ -7,6 +7,8 @@ Disconnect = Disconnect
 Exception = Exception
 Exit = Exit
 Host = Host
+MooListDialog = Moo list...
+MooListDialogTitle = Moo List
 OK = OK
 Port = Port
 Send = Send
