@@ -1,4 +1,9 @@
 HEAD
+	Added a MOO list.
+	Added some stuff that would be needed for a configuration directory.
+	Went all Nazi with final through instance variables and method args.
+	Changed bits that are deprecated in J2SE 1.5.
+	Optimised how the translations are handled.
 	Added the scrollback hack factor as a static final in MooWindow.
 	Implemented command history.
 
